fix prisma
